# cluster-api-provider-aws

./: .backportrc.json  .bazelrc  .ci-operator.yaml  .dockerignore  .gitignore  .gitleaksignore  .golangci-kal.yml  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  .snyk  0001-Delete-annotated-machines-first-when-scaling-down.patch  0001-Upstream-677-Init-klog-in-manager-properly.patch  0001-Validate-machineset-before-reconciliation.patch  0001-use-Update-instead-of-Status.Update-as-CustomResourc.patch  0002-Sort-machines-before-syncing.patch  AGENTS.md  AI_POLICY.md  BUILD.bazel  CONTRIBUTING.md  Dockerfile  Dockerfile.fastbuild  Dockerfile.rhel  Dockerfile.rhel7  Gopkg.toml  Makefile  OWNERS  OWNERS_ALIASES  PROJECT  README.md  RELEASE.md  SECURITY_CONTACTS  WORKSPACE  boilerplate.go.txt  cloudbuild-nightly.yaml  cloudbuild.yaml  clusterctl-settings.json  common.mk  dev.dockerfile  devbox.json  (+15 more)
cmd/manager/: BUILD  BUILD.bazel  main.go  manager-version-patch-dev.yaml  manager-version-patch.yaml
cmd/release/: BUILD.bazel  main.go
cmd/versioninfo/: BUILD  BUILD.bazel  versioninfo.go  versioninfo_test.go
config/: BUILD  BUILD.bazel  bootstrap.sh  cluster.yaml  generate-bootstrap.sh  generate-yaml.sh  kustomization.yaml  machine.yaml  manager.yaml  master-machine.yaml  master-user-data-secret.yaml  master-user-data.sh  patch_crd_webhook_namespace.yaml  rbac.yaml  webhook-ns.yaml  worker-machineset.yaml
config/aws-provider-components/: kustomization.yaml
config/certmanager/: certificate.yaml  kustomization.yaml
config/controllers/: deployment.yaml
config/crd/: kustomization.yaml
config/crds/: awsprovider_v1alpha1_awsclusterproviderconfig.yaml  awsprovider_v1alpha1_awsclusterproviderspec.yaml  awsprovider_v1alpha1_awsclusterproviderstatus.yaml  awsprovider_v1alpha1_awsmachineproviderconfig.yaml  awsprovider_v1alpha1_awsmachineproviderspec.yaml  awsprovider_v1alpha1_awsmachineproviderstatus.yaml  awsproviderconfig_v1alpha1_awsclusterproviderconfig.yaml  awsproviderconfig_v1alpha1_awsmachineproviderconfig.yaml  cluster.crd.yaml  infrastructure.cluster.sigs.k8s.io_awsclusterproviderspecs.yaml  infrastructure.cluster.sigs.k8s.io_awsclusterproviderstatuses.yaml  infrastructure.cluster.sigs.k8s.io_awsmachines.yaml  infrastructure.cluster.sigs.k8s.io_awsmachinetemplates.yaml  infrastructure.cluster.x-k8s.io_awsclusterproviderspecs.yaml  infrastructure.cluster.x-k8s.io_awsclusterproviderstatuses.yaml  infrastructure.cluster.x-k8s.io_awsclusters.yaml  infrastructure.cluster.x-k8s.io_awsmachines.yaml  infrastructure.cluster.x-k8s.io_awsmachinetemplates.yaml  kustomization.yaml  machine.crd.yaml  machine.openshift.io.crd.yaml  machinedeployment.crd.yaml  machinedeployment.openshift.io.crd.yaml  machineset.crd.yaml  machineset.openshift.io.crd.yaml
config/default/: BUILD  BUILD.bazel  aws_credentials_patch.yaml  aws_manager_image_patch.yaml  credentials.yaml  kustomization.yaml  kustomizeconfig.yaml  manager_auth_proxy_patch.yaml  manager_credentials_patch.yaml  manager_iam_patch.yaml  manager_image_patch.yaml  manager_probes.yaml  manager_prometheus_metrics_patch.yaml  metrics_service.yaml  rbac_role_binding_patch.yaml  tmp.yaml  webhookcainjection_patch.yaml
config/default-without-credentials/: kustomization.yaml  manager.yaml
config/manager/: BUILD  BUILD.bazel  auth_proxy_role.yaml  auth_proxy_role_binding.yaml  auth_proxy_service.yaml  credentials.yaml  kustomization.yaml  kustomizeconfig.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  manager.yaml  manager_args_patch.yaml  manager_auth_proxy_patch.yaml  manager_image_patch.yaml  namespace.yaml  patch_kube_rbac_proxy.yaml  patch_metrics.yaml  service.yaml  serviceaccount.yaml  stateful_set.yaml
config/provider-components/: kustomization.yaml  secret-patch.yaml
config/rbac/: auth_proxy_service.yaml  awsclustertemplate_editor_role.yaml  awsclustertemplate_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  rbac.yaml  rbac_role.yaml  rbac_role_binding.yaml  role.yaml  serviceaccount.yaml
config/release/: kustomization.yaml
config/sample/: awsproviderconfig_v1alpha1_awsclusterproviderconfig.yaml
config/samples/: aws-provider-components.yaml  awsprovider_v1alpha1_awsclusterproviderconfig.yaml  awsprovider_v1alpha1_awsclusterproviderstatus.yaml  awsprovider_v1alpha1_awsmachineproviderconfig.yaml  awsprovider_v1alpha1_awsmachineproviderstatus.yaml  cluster.yaml  (+8 more)
controllers/: BUILD.bazel  awscluster_controller.go  awscluster_controller_test.go  awscluster_controller_unit_test.go  awsclusterrole_identity_controller.go  awsclusterrole_identity_controller_test.go  awsclusterstatic_identity_controller.go  awsclusterstatic_identity_controller_test.go  awsmachine_annotations.go  awsmachine_controller.go  awsmachine_controller_test.go  awsmachine_controller_unit_test.go  awsmachine_security_groups.go  awsmachine_tags.go  awsmachinetemplate_controller.go  awsmachinetemplate_controller_unit_test.go  awsmanagedcluster_controller.go  disabled_controllers.go  disabled_controllers_unit_test.go  helpers.go  helpers_test.go  nlb_readiness_check.go  nlb_readiness_check_test.go  rosacluster_controller.go  rosacluster_controller_test.go  rosaroleconfig_controller.go  rosaroleconfig_controller_test.go  suite_test.go
hack/: BUILD  BUILD.bazel  ami-publication-roadmap.md  aws-provision.sh  aws-region-az-fetch.sh  boskos.py  changelog.tpl  checkin_account.py  checkout_account.py  ci-test.sh  coalesce.py  copy-bazel-mocks.sh  e2e-aws-disallowed.txt  e2e-aws-janitor.sh  e2e-aws-resources-list.sh  e2e.sh  eks-clusterawsadm-config.yaml  ensure-go.sh  ensure-golangci-lint.sh  ensure-kind.sh  ensure-kubectl.sh  ensure-kustomize.sh  fetch-ext-bins.sh  gen-clusterclass-test-flavors.sh  gen-test-flavors.sh  generate-manager-credentials-file.sh  generate-mocks.sh  generate-release-manager-image-patch.sh  get-project-maintainers.sh  go-fmt.sh  go-lint.sh  go-mod.sh  go-vet.sh  goimports.sh  heartbeat_account.py  imagebuilder.sh  install-build.sh  k8s-supported-versions.json  owner_reset.sh  print-workspace-status.sh  (+19 more)
(+2715 files in other folders)
