# Copyright 2019 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//build:controller_gen.bzl", "controller_gen")

KUSTOMIZE = "@io_k8s_sigs_kustomize//:kustomize"

controller_gen(
    name = "config",
    api = [
        {
            "group": "awsprovider.k8s.io",
            "version": "v1alpha1",
            "types": [
                "AWSClusterProviderSpec",
                "AWSClusterProviderStatus",
                "AWSMachineProviderSpec",
                "AWSMachineProviderStatus",
            ],
        },
    ],
    importpath = "sigs.k8s.io/cluster-api-provider-aws",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "kustomize-yaml",
    srcs = glob([
        "crds/*.yaml",
        "rbac/*.yaml",
        "manager/*.yaml",
        "default/*.yaml",
    ]),
    visibility = ["//visibility:public"],
)

genrule(
    name = "provider-non-stamped-base",
    srcs = [
        "//config:default/rbac_role_binding_patch.yaml",
        "config",
        "//config:default/kustomization.yaml",
        ":kustomize-yaml",
        "//:WORKSPACE",
    ],
    outs = ["provider-non-stamped-base.yaml"],
    cmd = " && ".join([
        "CONFIG_SRCDIR=$$(dirname $(location //:WORKSPACE))/config",
        "cp -R $$CONFIG_SRCDIR/default $(@D)/default",
        "cp -R $$CONFIG_SRCDIR/manager $(@D)/manager",
        "cp -R $$CONFIG_SRCDIR/crds $(@D)/",
        "cp -R $$CONFIG_SRCDIR/rbac $(@D)/",
        "$(location %s) build $(@D)/default > $@" % KUSTOMIZE,
    ]),
    tools = [KUSTOMIZE],
    visibility = ["//visibility:public"],
)
