load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all-srcs",
    srcs = glob(["**"]),
)

exports_files(glob([
    "boilerplate/*.txt",
    "*.sh",
]))

go_library(
    name = "go_default_library",
    srcs = ["tools.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-aws/hack",
    deps = [
        "@io_k8s_code_generator//cmd/client-gen:go_default_library",
        "@io_k8s_code_generator//cmd/conversion-gen:go_default_library",
        "@io_k8s_code_generator//cmd/deepcopy-gen:go_default_library",
        "@io_k8s_code_generator//cmd/defaulter-gen:go_default_library",
        "@io_k8s_code_generator//cmd/informer-gen:go_default_library",
        "@io_k8s_code_generator//cmd/lister-gen:go_default_library",
        "@io_k8s_code_generator//cmd/register-gen:go_default_library",
        "@io_k8s_code_generator//cmd/set-gen:go_default_library",
        "@io_k8s_sigs_controller_tools//cmd/controller-gen:go_default_library",
        "@io_k8s_sigs_testing_frameworks//integration:go_default_library",
    ],
)
