load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-aws/cmd/release",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "release",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
