# Copyright 2019 The Kubernetes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "templates",
    srcs = [
        "cluster.yaml",
        "cluster-network-spec.yaml",
        "machines.yaml",
        "//docs:getting-started.md",
        "//examples:addons.yaml",
        "//examples:provider-components-base.yaml",
    ],
    modes = {
        "addons.yaml": "0644",
        "cluster.yaml": "0644",
        "cluster-network-spec.yaml": "0644",
        "machines.yaml": "0644",
        "//examples:provider-components-base.yaml": "0644",
        "//docs:getting-started.md": "0644",
    },
    package_dir = "/",
    visibility = ["//visibility:public"],
)
