load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cloudtest.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-aws/pkg/cloudtest",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_logr_logr//:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
    ],
)
