load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["log.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-aws/pkg/logging",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/logging/klog:go_default_library",
        "//vendor/github.com/go-logr/logr:go_default_library",
    ],
)
