load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["tokens.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-aws/pkg/tokens",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/typed/core/v1:go_default_library",
        "//vendor/k8s.io/cluster-bootstrap/token/api:go_default_library",
        "//vendor/k8s.io/cluster-bootstrap/token/util:go_default_library",
    ],
)
