load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["tokens.go"],
    importpath = "sigs.k8s.io/cluster-api-provider-aws/pkg/tokens",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_client_go//kubernetes/typed/core/v1:go_default_library",
        "@io_k8s_cluster_bootstrap//token/api:go_default_library",
        "@io_k8s_cluster_bootstrap//token/util:go_default_library",
    ],
)
